1.6.2
- Added Questtarget to the Immersive dialouge (At the End)
- Changed Bag and Bank min sizing
- Changed target debuffs to 8 per row

1.6.1
- Update libs

1.6.0
- Added Honortab

1.5.0
- Fix chatframe moving and resizing error
- Update libs

1.4.0
- Added advanced char stats (hover over the 'Attribute'-label)
- Change lib from LibClassicHealComm-1.0 to LibHealComm-4.0
- Added pet level to pet frame
- Update libs

1.3.0

- Make lootframe moveable (if not hooked under mouse)
- Added a 'Skin'-Tab into settings

1.2.1

- Fix a position error with the MultiBarBottomRight
- Fix a tooltip error with resistence tooltips
- Update libs

1.2.0

- Added custom UIDropDownMenu
- Added repu background for Wildhammer Clan
- Change range indicator for Multibars
- Make XP-Bar as a module

1.1.0

- Tooltip now anchor to the bottom right of the Tooltip mover frame
- Added custom mainmenu
- Added custom loot frame
- Added custom staticpopup
- Added Pet diet info
- Update libs


1.0.0

- Added Character Panel
- Added Talent Panel
- Added Spellbook
- Added level to QuestTracker
- Added back Searchbar to bag and bank
- Added Welcome- and Changelog Page
- Added TitanClassic Support (MultiBarRight should not move a bit down)
- Fix MultiBarLeft and Right finally (also when get attack in stealth)
- Added back Chatwindow
- Added back Dynamic-Cam Mode
- Change debuff position on target and player if target/player has no buffs
- Update locals (zhTW, ptBR)
- Update Aura Indicator for raidframes
- Added enemy buffs on targetframe
- Added itemborder for professionbags
- Added back Health option to raidframes
- Added HealPrediction for Raidframes: Used libHealComm - Works only if all others has also this lib installed and setup

0.9.1

- Added support for GatherLite after there Update
- Added "Color level number"
- Added Pixel Perfection-Mode
- Fix a bug in Immersice Questing
- Hide default Bliizard PetBarFrame
- Fix position of exp bar

0.9.0
