@@ -249,6 +249,7 @@ GW_DEFAULT["STATICPOPUP_SKIN_ENABLED"] = true
 GW_DEFAULT["BNTOASTFRAME_SKIN_ENABLED"] = true
 GW_DEFAULT["DROPDOWNLIST_SKIN_ENABLED"] = true
 GW_DEFAULT["DROPDOWNMENU_SKIN_ENABLED"] = true
+GW_DEFAULT["BLIZZARDCLASSCOLOR_ENABLED"] = true
 
 --GW_DEFAULT["USE_BATTLEGROUND_HUD"] = false
 
