@@ -2,6 +2,7 @@
 - Added Questtarget to the Immersive dialouge (At the End)
 - Changed Bag and Bank min sizing
 - Changed target debuffs to 8 per row
+- Added option under Skins 'Use Blizzard Class Colors'
 
 1.6.1
 - Update libs
